menambahkan link rencanalayout.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1 align="center">Website dalam Pengembangan</h1>
+    <a href="rencanalayout.html">Rencana Layout</a>
     <!-- Kode Bagian Header Tulis Disini -->
 
 
