edit file index.html dan stylesheet.css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Kelompok E9-DTS20</title>
+    <link rel="stylesheet" href="./css/stylesheet.css">
   </head>
   <body>
-    <h1 align="center">Website dalam Pengembangan</h1>
-    <a href="rencanalayout.html">Rencana Layout</a>
+    <!-- Kode Awal Pengembangan Web -->
+    <div class="tampilan-awal">
+      <h1 align="center">Website dalam Pengembangan</h1>
+      <a href="rencanalayout.html">Rencana Layout</a>
+    </div>
     <!-- Kode Bagian Header Tulis Disini -->
 
 
