--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 
 
     <!-- Kode Bagian Footer Tulis Disini -->
+	<div class="copyrights">
+      <div class="container">
+        <p>&copy; Copyrights <strong>E9-DTS20</strong>. All Rights Reserved</p>
+        <div class="credits">Created with E9-DTS20 by <a href="https://github.com/E9-DTS20/project-website" target="blank">E9-DTS20</a>
+        </div>
+      </div>
+    </div>
 
 
   </body>
