--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   </head>
   <body>
     <!-- Kode Awal Pengembangan Web -->
+	   <header>
+      <div class="container">
+        <div class="header-left">
+    <!-- gambar logo -->
+        </div>
+        <!-- Tambahkan ikon menu disini -->
+        <div class="header-left">
+          <span class="fa fa-bars menu-icon"></span>
+        </div>
+        <div class="header-right">
+          <a href="#">Pelajaran</a>
+          <a href="#">Daftar</a>
+          <a href="#" class="login">Log in</a>
+        </div>
+      </div>
+    </header>
+	  
     <div class="tampilan-awal">
       <h1 align="center">Website dalam Pengembangan</h1>
       <a href="rencanalayout.html">Rencana Layout</a>
