Bagian Anggota Kelompok

--- a/index.html
+++ b/index.html
@@ -35,7 +35,45 @@
 
 
     <!-- Kode Bagian Anggota Kelompok Tulis Disini -->
+    <div class="team-section">
+      <div class="container">
+        <h1>Meet Our Team</h1>
+        <span class="border"></span>
+        <div class="ps">
+          <a href="#p1"><img src="/images/Ninja Ken 1.png" alt=""></a>
+          <a href="#p2"><img src="/images/Ninja Ken 2.png" alt=""></a>
+          <a href="#p3"><img src="/images/Ninja Ken 3.png" alt=""></a>
+          <a href="#p4"><img src="/images/Ninja Ken 4.png" alt=""></a>
+          <a href="#p5"><img src="/images/Ninja Ken 5.png" alt=""></a>
+        </div>
 
+        <div class="section" id="p1">
+          <span class="name">Hilman</span>
+          <span class="border"></span>
+          <p>Asal Bekasi</p>
+        </div>
+        <div class="section" id="p2">
+          <span class="name">Ikhwan Afif Irwandi</span>
+          <span class="border"></span>
+          <p>Asal Lamongan</p>
+        </div>
+        <div class="section" id="p3">
+          <span class="name">Irhadi KW</span>
+          <span class="border"></span>
+          <p>Asal Lombok</p>      
+        </div>
+        <div class="section" id="p4">
+          <span class="name">Irfan Albi</span>
+          <span class="border"></span>
+          <p>Asal Langkat</p>
+        </div>
+        <div class="section" id="p5">
+          <span class="name">Jamaluddin</span>
+          <span class="border"></span>
+          <p>Asal Sukabumi</p>
+        </div>        
+      </div>  
+    </div>
 
     <!-- Kode Bagian Hubungi Kami Tulis Disini -->
 
