--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <h1>Meet Our Team</h1>
         <span class="border"></span>
         <div class="ps">
-          <a href="#p1"><img src="/images/Ninja Ken 1.png" alt=""></a>
-          <a href="#p2"><img src="/images/Ninja Ken 2.png" alt=""></a>
-          <a href="#p3"><img src="/images/Ninja Ken 3.png" alt=""></a>
-          <a href="#p4"><img src="/images/Ninja Ken 4.png" alt=""></a>
-          <a href="#p5"><img src="/images/Ninja Ken 5.png" alt=""></a>
+          <a href="#p1"><img src="./images/Ninja_Ken_1.png" alt=""></a>
+          <a href="#p2"><img src="./images/Ninja_Ken_2.png" alt=""></a>
+          <a href="#p3"><img src="./images/Ninja_Ken_3.png" alt=""></a>
+          <a href="#p4"><img src="./images/Ninja_Ken_4.png" alt=""></a>
+          <a href="#p5"><img src="./images/Ninja_Ken_5.png" alt=""></a>
         </div>
 
         <div class="section" id="p1">
