update index.html dan menambah file responsive.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Kelompok E9-DTS20</title>
     <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="./css/responsive.css">
   </head>
   <body>
     <!-- Kode Bagian Header Tulis Disini -->
