--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <span class="fa fa-bars menu-icon"></span>
         </div>
         <div class="header-right">
-          <a href="#">Pelajaran</a>
-          <a href="#">Daftar</a>
-          <a href="#" class="login">Log in</a>
+          <a href="#">Beranda</a>
+          <a href="#">Anggota Kelompok</a>
+          <a href="#" >Hubungi Kami</a>
         </div>
       </div>
     </header>
