pindah header ke tengah

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-left">
           <span class="fa fa-bars menu-icon"></span>
         </div>
-        <div class="header-right">
+        <div class="header-center">
           <a href="#">Beranda</a>
           <a href="#">Anggota Kelompok</a>
           <a href="#" >Hubungi Kami</a>
