--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <p>Asal Bekasi</p>
         </div>
         <div class="section" id="p2">
-          <span class="name">Ikhwan Afif Irwandi</span>
+          <span class="name">Ikhwan Afif Irfandi</span>
           <span class="border"></span>
           <p>Asal Lamongan</p>
         </div>
@@ -68,19 +68,26 @@
         </div>
       </div>
     </div>
-
     <!-- Kode Bagian Hubungi Kami Tulis Disini -->
-
-
+    <div class="contact-form">
+      <form action="" id="contact-form" method="">
+        <h2>Hubungi Kami</h2>
+        <h3>Nama</h3>
+        <input type="text" name="name" class="form-control" placeholder="Tuliskan nama anda" required><br>
+        <h3>Email</h3>
+        <input type="email" name="email" class="form-control" placeholder="Tuliskan email anda" required><br>
+        <h3>Pesan</h3>
+        <textarea name="message" class="form-control" cols="30" rows="4" required></textarea><br>
+        <input type="submit" class="contact-submit" value="Kirim"></input>
+      </form>
+    </div>
     <!-- Kode Bagian Footer Tulis Disini -->
-	<div class="copyrights">
+	  <div class="copyrights">
       <div class="container">
         <p>&copy; Copyrights <strong>E9-DTS20</strong>. All Rights Reserved</p>
         <div class="credits">Created with E9-DTS20 by <a href="https://github.com/E9-DTS20/project-website" target="blank">E9-DTS20</a>
         </div>
       </div>
     </div>
-
-
   </body>
 </html>
