--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
     </header>
 
     <!-- Kode Bagian Utama Tulis Disini -->
-
+    <div class="main-section">
+      <div class="container">
+        <h1>Tugas Kelompok E9-DTS20</h1>
+        <p>Website sederhana ini merupakan tugas mengimplementasikan pelajaran HTML dan CSS yang telah dipelajari melalui aplikasi <span>Progate.com</span></p>
+        <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.”</>
+      </div>
+    </div>
 
     <!-- Kode Bagian Anggota Kelompok Tulis Disini -->
     <div class="team-section">
