--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="container">
         <div class="header-left">
     <!-- gambar logo -->
+          <img class="logo" src="./images/logo.png">
         </div>
         <!-- Tambahkan ikon menu disini -->
         <div class="header-left">
