Perubahan Bagian Anggota Kelompok

--- a/index.html
+++ b/index.html
@@ -36,45 +36,52 @@
     </div>
 
     <!-- Kode Bagian Anggota Kelompok Tulis Disini -->
-    <div class="team-section">
-      <div class="container">
-        <h1>Meet Our Team</h1>
-        <span class="border"></span>
-        <div class="ps">
-          <a href="#p1"><img src="./images/Ninja_Ken_1.png" alt=""></a>
-          <a href="#p2"><img src="./images/Ninja_Ken_2.png" alt=""></a>
-          <a href="#p3"><img src="./images/Ninja_Ken_3.png" alt=""></a>
-          <a href="#p4"><img src="./images/Ninja_Ken_4.png" alt=""></a>
-          <a href="#p5"><img src="./images/Ninja_Ken_5.png" alt=""></a>
+    <div class="team">
+      <div class="flex-container">
+        <h1>ANGGOTA KELOMPOK</h1>
+        <div class="card">
+          <div class="box">
+            <img src="./images/Ninja_Ken_1.png" alt="">
+            <h4>HILMAN</h4>
+            <h5>Asal Bekasi</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+          </div>
         </div>
-
-        <div class="section" id="p1">
-          <span class="name">Hilman</span>
-          <span class="border"></span>
-          <p>Asal Bekasi</p>
+        <div class="card">
+          <div class="box">
+            <img src="./images/Ninja_Ken_2.png" alt="">
+            <h4>IKHWAN AFIF IRFANDI</h4>
+            <h5>Asal Lamongan</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+          </div>
         </div>
-        <div class="section" id="p2">
-          <span class="name">Ikhwan Afif Irfandi</span>
-          <span class="border"></span>
-          <p>Asal Lamongan</p>
+        <div class="card">
+          <div class="box">
+            <img src="./images/Ninja_Ken_3.png" alt="">
+            <h4>IRHADI KW</h4>
+            <h5>Asal Lombok</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+          </div>
         </div>
-        <div class="section" id="p3">
-          <span class="name">Irhadi KW</span>
-          <span class="border"></span>
-          <p>Asal Lombok</p>
+        <div class="card">
+          <div class="box">
+            <img src="./images/Ninja_Ken_4.png" alt="">
+            <h4>IRFAN ALBI</h4>
+            <h5>Asal Langkat</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+          </div>
         </div>
-        <div class="section" id="p4">
-          <span class="name">Irfan Albi</span>
-          <span class="border"></span>
-          <p>Asal Langkat</p>
-        </div>
-        <div class="section" id="p5">
-          <span class="name">Jamaluddin</span>
-          <span class="border"></span>
-          <p>Asal Sukabumi</p>
+        <div class="card">
+          <div class="box">
+            <img src="./images/Ninja_Ken_5.png" alt="">
+            <h4>JAMALUDDIN</h4>
+            <h5>Asal Sukabumi</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+          </div>
         </div>
       </div>
     </div>
+    
     <!-- Kode Bagian Hubungi Kami Tulis Disini -->
     <div class="contact-form">
       <form action="" id="contact-form" method="">
