update header dan bagian utama

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <div class="container">
         <div class="header-left">
     <!-- gambar logo -->
-          <img class="logo" src="./images/logo.png">
+          <img class="logo" src="./images/logo_kelas.png">
         </div>
         <!-- Tambahkan ikon menu disini -->
         <div class="header-left">
           <span class="fa fa-bars menu-icon"></span>
         </div>
-        <div class="header-center">
+        <div class="header-right">
           <a href="#">Beranda</a>
           <a href="#">Anggota Kelompok</a>
           <a href="#" >Hubungi Kami</a>
@@ -30,8 +30,9 @@
     <div class="main-section">
       <div class="container">
         <h1>Tugas Kelompok E9-DTS20</h1>
-        <p>Website sederhana ini merupakan tugas mengimplementasikan pelajaran HTML dan CSS yang telah dipelajari melalui aplikasi <span>Progate.com</span></p>
-        <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.”</>
+        <p>Website sederhana ini merupakan tugas mengimplementasikan pelajaran HTML dan CSS yang telah dipelajari melalui situs <span>Progate</span>.</p>
+        <p>Banyak hal yang dapat kita pelajari di situs <span>Progate</span> terkait dengan pengembangan website. Pada situs tersebut kita akan diberikan materi latihan yang sistematis sehingga mudah diikuti. Bahkan hasil dari latihan yang kita lakukan bisa langsung terlihat, dan bisa langsung dibandingkan dengan jawaban yang sebenarnya. Penasaran dan tertarik untuk belajar bersama <span>Progate</span>? Mari bergabung bersama kami!!!</p>
+        <p><a href="https://progate.com/courses" target="_blank">Bergabung</a></p>
       </div>
     </div>
 
@@ -81,7 +82,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- Kode Bagian Hubungi Kami Tulis Disini -->
     <div class="contact-form">
       <form action="" id="contact-form" method="">
