tambah background formulir

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="header-right">
           <a href="#">Beranda</a>
           <a href="#">Anggota Kelompok</a>
-          <a href="#" >Hubungi Kami</a>
+          <a href="#contact-form" >Hubungi Kami</a>
         </div>
       </div>
     </header>
@@ -85,16 +85,18 @@
 
     <!-- Kode Bagian Hubungi Kami Tulis Disini -->
     <div class="contact-form">
-      <form action="" id="contact-form" method="">
-        <h2>Hubungi Kami</h2>
-        <h3>Nama</h3>
-        <input type="text" name="name" class="form-control" placeholder="Tuliskan nama anda" required><br>
-        <h3>Email</h3>
-        <input type="email" name="email" class="form-control" placeholder="Tuliskan email anda" required><br>
-        <h3>Pesan</h3>
-        <textarea name="message" class="form-control" cols="30" rows="4" required></textarea><br>
-        <input type="submit" class="contact-submit" value="Kirim"></input>
-      </form>
+      <div class="container">
+        <form action="" id="contact-form" method="">
+          <h2>Hubungi Kami</h2>
+          <h3>Nama</h3>
+          <input type="text" name="name" class="form-control" placeholder="Tuliskan nama anda" required><br>
+          <h3>Email</h3>
+          <input type="email" name="email" class="form-control" placeholder="Tuliskan email anda" required><br>
+          <h3>Pesan</h3>
+          <textarea name="message" class="form-control" cols="30" rows="4" required></textarea><br>
+          <input type="submit" class="contact-submit" value="Kirim"></input>
+        </form>
+      </div>
     </div>
     <!-- Kode Bagian Footer Tulis Disini -->
 	  <div class="copyrights">
