Tambah Link Font Awesome dan hilangkan menu pada responsive smartphone

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Kelompok E9-DTS20</title>
     <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!-- Kode Bagian Header Tulis Disini -->
@@ -15,7 +16,6 @@
           <img class="logo" src="./images/logo_kelas.png">
         </div>
         <!-- Tambahkan ikon menu disini -->
-        <div class="header-left">
           <span class="fa fa-bars menu-icon"></span>
         </div>
         <div class="header-right">
