--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
     <!-- Kode Bagian Utama Tulis Disini -->
     <div class="main-section">
-      <div class="container">
-        <h1>Tugas Kelompok E9-DTS20</h1>
-        <p>Website sederhana ini merupakan tugas mengimplementasikan pelajaran HTML dan CSS yang telah dipelajari melalui situs <span>Progate</span>.</p>
-        <p>Banyak hal yang dapat kita pelajari di situs <span>Progate</span> terkait dengan pengembangan website. Pada situs tersebut kita akan diberikan materi latihan yang sistematis sehingga mudah diikuti. Bahkan hasil dari latihan yang kita lakukan bisa langsung terlihat, dan bisa langsung dibandingkan dengan jawaban yang sebenarnya. Penasaran dan tertarik untuk belajar bersama <span>Progate</span>? Mari bergabung bersama kami!!!</p>
-        <p><a href="https://progate.com/courses" target="_blank">Bergabung</a></p>
+      <div class="container content">
+          <h1>Tugas Kelompok E9-DTS20</h1>
+          <p>Website sederhana ini merupakan tugas mengimplementasikan pelajaran HTML dan CSS yang telah dipelajari melalui situs <span>Progate</span>.</p>
+          <p>Banyak hal yang dapat kita pelajari di situs <span>Progate</span> terkait dengan pengembangan website. Pada situs tersebut kita akan diberikan materi latihan yang sistematis sehingga mudah diikuti. Bahkan hasil dari latihan yang kita lakukan bisa langsung terlihat, dan bisa langsung dibandingkan dengan jawaban yang sebenarnya. Penasaran dan tertarik untuk belajar bersama <span>Progate</span>? Mari bergabung bersama kami!!!</p>
+          <p><a href="https://progate.com/courses" target="_blank">Bergabung</a></p>
       </div>
     </div>
 
