update header animasi dan responsive

--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
     <!-- Kode Bagian Header Tulis Disini -->
     <header>
       <div class="container">
-        <div class="header-left">
-    <!-- gambar logo -->
-          <img class="logo" src="./images/logo_kelas.png">
-        </div>
-        <!-- Tambahkan ikon menu disini -->
-          <span class="fa fa-bars menu-icon"></span>
-        <div class="header-right">
-          <a href="#">Beranda</a>
-          <a href="#">Anggota Kelompok</a>
-          <a href="#contact-form" >Hubungi Kami</a>
-        </div>
+	      <span class="animlogo" id="logo1"><img src="./images/logo1.png" /></span>
+        <span class="animlogo" id="logo2"><img src="./images/logo2.png" /></span>
+        <ul class="topnav">
+            <li><a href="#">Beranda</a></li>
+            <li><a href="#">Anggota Kelompok</a></li>
+            <li><a href="#">Hubungi Kami</a></li>
+            <li class="iconmenu"><a href="#">☰</a></li>
+        </ul>
       </div>
     </header>
 
