--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelompok E9-DTS20</title>
     <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="./css/responsive.css">
