update bagian kelompok
Menyesuaikan bagian kelompok, dan menambahkan foto yang diperlukan, sekaligus menghapus gambar yang tidak diperlukan

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <h1 id="satu">BELAJAR CODING</h1>
             <h1 id="dua">BERSAMA E9-DTS20</h1>
             <p id="p1">Mari Belajar Coding bersama Kami <strong>E9-DTS20</strong>,
-            belajar coding dengans<span style="color:#c293fc; font-weight:bold"> Progate.com</span>.
+            belajar coding dengan<span style="color:#c293fc; font-weight:bold"> Progate.com</span>.
             Terstruktur - Mudah - Menyenangkan - Kompeten. <br /><br />
             Mari bergabung bersama kami!!!</p>
-            <p id="p2"><a href="https://progate.com/courses" target="_blank">Bergabung</a></p>
+            <p id="p2"><a href="https://progate.com/courses" target="_blank">Gabung</a></p>
         </div>
       </div>
     </div>
@@ -52,42 +52,37 @@
         <div class="baris">
           <div class="col-20">
             <div class="box">
-              <img src="./images/Ninja_Ken_1.png" alt="">
-              <h4>HILMAN</h4>
-              <h5>Asal Bekasi</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+              <img src="./images/hilman.png" alt="">
+              <p>"Senangnya belajar bersama Progate.com. Dibimbing sampai bisa"<br />
+              [<span class="namaku">Hilman</span> | <span class="asal">Bekasi</span>]</p>
             </div>
           </div>
           <div class="col-20">
             <div class="box">
-              <img src="./images/Ninja_Ken_2.png" alt="">
-              <h4>IKHWAN</h4>
-              <h5>Asal Lamongan</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+              <img src="./images/ikhwan.png" alt="">
+              <p>"Senangnya belajar bersama Progate.com. Dibimbing sampai bisa"<br />
+              [<span class="namaku">Ikhwan</span> | <span class="asal">Lamongan</span>]</p>
             </div>
           </div>
           <div class="col-20">
             <div class="box">
-              <img src="./images/Ninja_Ken_3.png" alt="">
-              <h4>IRHADY</h4>
-              <h5>Asal Lombok</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+              <img src="./images/irfan.png" alt="">
+              <p>"Senangnya belajar bersama Progate.com. Dibimbing sampai bisa"<br />
+              [<span class="namaku">Irfan</span> | <span class="asal">Langkat</span>]</p>
             </div>
           </div>
           <div class="col-20">
             <div class="box">
-              <img src="./images/Ninja_Ken_4.png" alt="">
-              <h4>IRFAN ALBI</h4>
-              <h5>Asal Langkat</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+              <img src="./images/jamal.png" alt="">
+              <p>"Senangnya belajar bersama Progate.com. Dibimbing sampai bisa"<br />
+              [<span class="namaku">Jamaluddin</span> | <span class="asal">Sukabumi</span>]</p>
             </div>
           </div>
           <div class="col-20">
             <div class="box">
-              <img src="./images/Ninja_Ken_5.png" alt="">
-              <h4>JAMALUDDIN</h4>
-              <h5>Asal Sukabumi</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+              <img src="./images/irhady.png" alt="">
+              <p>"Senangnya belajar bersama Progate.com. Dibimbing sampai bisa"<br />
+              [<span class="namaku">Irhady</span> | <span class="asal">Lombok</span>]</p>
             </div>
           </div>
         </div>
