--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">Beranda</a></li>
             <li><a href="#">Anggota Kelompok</a></li>
             <li><a href="#">Hubungi Kami</a></li>
-            <li class="iconmenu"><a href="#">☰</a></li>
+            <li class="iconmenu"><a href="#"><span class="fa fa-bars"></span></a></li>
         </ul>
       </div>
     </header>
@@ -27,17 +27,17 @@
     <div class="main-section">
       <div class="container" id="slider">
         <figure>
-          <img src="./images/1.jpg" alt="1">
-          <img src="./images/2.jpg" alt="2">
-          <img src="./images/1.jpg" alt="3">
-          <img src="./images/3.jpg" alt="4">
-          <img src="./images/1.jpg" alt="5">
+          <img src="./images/coding1.jpg" alt="1">
+          <img src="./images/coding2.jpg" alt="2">
+          <img src="./images/coding3.jpg" alt="3">
+          <img src="./images/coding4.jpg" alt="4">
+          <img src="./images/coding1.jpg" alt="5">
         </figure>
         <div class="judul">
             <h1 id="satu">BELAJAR CODING</h1>
             <h1 id="dua">BERSAMA E9-DTS20</h1>
-            <p id="p1">Mari Belajar Coding bersama Kami <strong>E9-DTS20</strong>,
-            belajar coding dengan<span style="color:#c293fc; font-weight:bold"> Progate.com</span>.
+            <p id="p1">Belajar Coding dengan <strong>E9-DTS20</strong>
+            dan<span style="color:yellow; font-weight:bold"> Progate.com</span>.<br />
             Terstruktur - Mudah - Menyenangkan - Kompeten. <br /><br />
             Mari bergabung bersama kami!!!</p>
             <p id="p2"><a href="https://progate.com/courses" target="_blank">Gabung</a></p>
@@ -127,12 +127,12 @@
     <!-- Kode Bagian Footer Tulis Disini -->
 	  <div class="copyrights">
       <div class="container">
-        <span id="copyrights">
+        <p id="copyright">
           &copy; Copyrights <strong>E9-DTS20</strong>. All Rights Reserved
-        </span>
-        <span id="credits">
+        </p>
+        <p id="credits">
           Created by <a href="https://github.com/E9-DTS20/project-website" target="blank">Tim E9-DTS20</a>
-        </span>
+        </p>
       </div>
     </div>
   </body>
